--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-使用cascade 结构，每一次cascade使用patchmatch，最后经过cost volume和refined net
+torch==1.4.0
+torchvision==0.2.0
+opencv-python
+numpy
+plyfile
+pillow
+tensorboard
